# universal_robot_teleoperation

./: CMakeLists.txt
universal_robot_teleoperation/: CMakeLists.txt  package.xml
ur_control_box/: ConfigurationFake.cpp  ConfigurationFake.h  ConfigurationWrapper.h  RobotinterfaceFake.cpp  RobotinterfaceFake.h  RobotinterfaceWrapper.h  URComm.cpp  URComm.h  URInterface.cpp  URInterface.h  VelocityPControl.h  run_cb_driver.cpp
ur_control_box/ur_c_api/: Configuration.h  errorCodes.h
ur_control_box/ur_messages/: ConfigCommandMessage.cpp  ConfigCommandMessage.h  JointCommandMessage.cpp  JointCommandMessage.h  JointCommandMessage.h~  RobotStateMessage.cpp  RobotStateMessage.h  RobotStateMessage.h~  URMessages.h  cmd_utils.cpp  cmd_utils.h
ur_description/urdf/: ur10.urdf.xacro  ur10_joint_limited_robot.urdf.xacro  ur10_robot.urdf.xacro  ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
ur_teleop_bringup/: CMakeLists.txt  package.xml  universal_robot.rviz
ur_teleop_bringup/launch/: ur5.launch
ur_teleop_commons/: CMakeLists.txt  package.xml
ur_teleop_commons/include/commons/serialize/: ByteBuffer.h  ByteBufferEndian.h  SerializeInterface.h
ur_teleop_commons/include/commons/socket/: SocketInterface.h  UDPClient.h  UDPServer.h  UDPSocket.h
ur_teleop_commons/include/commons/utils/: CSVOstream.h  ElapsedTime.h  LoopInterface.h  conio_linux.h  logger.h
ur_teleop_commons/src/: ByteBuffer.cpp  ByteBufferEndian.cpp  LoopInterface.cpp  SocketInterface.cpp  UDPClient.cpp  UDPServer.cpp  UDPSocket.cpp
ur_teleop_master/: CMakeLists.txt  README.md  haptic_device_test.rviz  package.xml
ur_teleop_master/include/haptics/force_generator/: ForceGenerator.h  FrictionMode.h  RateModeInteface.h
ur_teleop_master/include/haptics/haptic_devices/: Button.h  Exceptions.h  HapticDevice.h  Omega6.h  Omega6Utils.h  OmegaDevice.h
ur_teleop_master/launch/: test_haptic_device.launch
ur_teleop_master/src/: Button.cpp  ExampleFrictionMode.cpp  Omega6.cpp  OmegaDevice.cpp
ur_teleop_messages/: CMakeLists.txt  package.xml
ur_teleop_messages/msg/: URConfigCommand.msg  URJointCommand.msg  URState.msg
ur_teleop_ros_client/: CMakeLists.txt  package.xml
ur_teleop_ros_client/include/ros_client/: URCallbackClient.h  URCallbackClientInterface.h  URRosClient.h
ur_teleop_ros_client/src/: URCallbackClient.cpp  URRosClient.cpp  main_ur_ros_clinent.cpp
